k8s/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "1024m"
  name: coldfront-ingress
spec:
  tls:
    - hosts:
      - coldfront.mss.mghpcc.org
      secretName: coldfront-tls  # pragma: allowlist secret
  rules:
    - host: coldfront.mss.mghpcc.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coldfront
                port:
                  number: 80

          - path: /static
            pathType: Prefix
            backend:
              service:
                name: coldfront-static-files
                port:
                  number: 80
